nvidia-libopencl1: Provides/Conflicts/Replaces: libopencl1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3123 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -612,9 +612,11 @@ Recommends:
 Provides:
  libopencl1,
 Conflicts:
+ libopencl1,
  nvidia-libopencl1-dev,
  nvidia-libopencl1-ia32 [i386],
 Replaces:
+ libopencl1,
  nvidia-libopencl1-dev,
 Description: NVIDIA OpenCL library
  OpenCL (Open Computing Language) is a multivendor open standard for
