--- a/debian/xserver-xorg-video-nvidia.lintian-overrides.in
+++ b/debian/xserver-xorg-video-nvidia.lintian-overrides.in
@@ -4,3 +4,6 @@ embedded-library usr/lib/#PRIVATE#/nvidia_drv.so: libpng
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
+
+# The templates come from nvidia-support.
+no-debconf-templates
