--- a/debian/control
+++ b/debian/control
@@ -34,6 +34,8 @@ Depends:
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
+Recommends:
+ libgl1-nvidia${nvidia:Legacy}-glx-i386 [amd64],
 Suggests:
  nvidia-settings,
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
@@ -130,6 +132,7 @@ Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Provides:
+ libgl1-nvidia${nvidia:Legacy}-glx-i386 [i386],
  libgl1-nvidia-glx-any,
 Conflicts:
  libgl1-nvidia${nvidia:Legacy}-dev,
@@ -172,6 +175,7 @@ Depends:
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
+ libgl1-nvidia${nvidia:Legacy}-glx-i386,
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
 Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
@@ -312,6 +316,7 @@ Suggests:
 Enhances:
  libvdpau1,
 Provides:
+ nvidia-vdpau-driver-i386 [i386],
  vdpau-driver,
 Conflicts:
  nvidia-libvdpau,
@@ -355,6 +360,7 @@ Depends:
  lib32vdpau1,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
+ nvidia-vdpau-driver-i386,
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
 Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
@@ -421,6 +427,8 @@ Recommends:
 Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+Provides:
+ libcuda1-i386 [i386],
 Conflicts:
  libcuda1-dev,
  libcuda1-ia32 [i386],
@@ -454,6 +462,7 @@ Pre-Depends:
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
+ libcuda1-i386,
  nvidia-kernel-${nvidia:Version}${nvidia:Perfkit},
 Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
@@ -485,6 +494,8 @@ Pre-Depends:
 Depends:
  libcuda1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
+Provides:
+ libnvidia-compiler-i386 [i386],
 Conflicts:
  libnvidia-compiler1,
  libnvidia-compiler-ia32 [i386],
@@ -506,6 +517,8 @@ Pre-Depends:
 Depends:
  libcuda1-ia32 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
+Recommends:
+ libnvidia-compiler-i386,
 Conflicts:
  libnvidia-compiler1-ia32,
 Replaces:
@@ -582,6 +595,7 @@ Conflicts:
  nvidia-opencl-icd-ia32 [i386],
 Provides:
  opencl-icd,
+ nvidia-opencl-icd-i386 [i386],
 Description: NVIDIA OpenCL ICD
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
@@ -599,6 +613,8 @@ Depends:
  libcuda1-ia32,
  libnvidia-compiler-ia32,
  ${misc:Depends}
+Recommends:
+ nvidia-opencl-icd-i386,
 Enhances:
  lib32opencl1,
 Provides:
@@ -622,6 +638,7 @@ Recommends:
  opencl-icd | nvidia-opencl-icd,
 Provides:
  libopencl1,
+ nvidia-libopencl1-i386 [i386],
 Conflicts:
  libopencl1,
  nvidia-libopencl1-dev,
@@ -646,6 +663,7 @@ Pre-Depends:
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
+ nvidia-libopencl1-i386,
  opencl-icd | nvidia-opencl-icd-ia32,
 Provides:
  lib32opencl1,
