--- a/debian/libgl1-nvidia-glx-ia32.postinst.in
+++ b/debian/libgl1-nvidia-glx-ia32.postinst.in
@@ -4,17 +4,7 @@ set -e
 
 if [ "$1" = "configure" ]; then
 
-	update-alternatives --install /usr/lib32/libGL.so.1 ia32-libGL.so.1 /usr/lib32/nvidia/libGL.so.1 42
-
-	if [ -x /usr/lib/nvidia/check-for-conflicting-opengl-libraries ]
-	then
-		/usr/lib/nvidia/check-for-conflicting-opengl-libraries
-	fi
-
-	if [ -x /usr/lib/nvidia/check-for-mismatching-nvidia-module ]
-	then
-		/usr/lib/nvidia/check-for-mismatching-nvidia-module #VERSION#
-	fi
+	update-alternatives --remove ia32-libGL.so.1 /usr/lib32/nvidia/libGL.so.1
 
 fi
 
