--- a/debian/rules
+++ b/debian/rules
@@ -341,11 +341,13 @@ prepare-squeeze-backport:
 
 ############################################################################
 
+PASV	?= --pasv
+
 .PHONY: get-orig-source
 get-orig-source:
 	rm -rf get-orig-source || true
 	mkdir get-orig-source
-	uscan --no-symlink --download-current-version --pasv \
+	uscan --no-symlink --download-current-version $(PASV) \
 	    --watchfile debian/watch --destdir get-orig-source
 	test `ls get-orig-source/* | wc -l` = 2  # we need exactly 2 downloaded files
 	@set -e -x ; \
