--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -12,6 +12,7 @@ Architecture: i386 amd64
 Provides: nvidia-kernel-#VERSION#
 Depends: nvidia-kernel-common (>= 20110213)
 Recommends: linux-image-#KVERS#
+Built-Using: ${built:using:kernel}, ${built:using:nvidia}
 Description: NVIDIA binary kernel module for Linux #KVERS#
  This package provides the non-free NVIDIA binary kernel module built for
  the Debian Linux kernel package.  This kernel module is required by the
