--- a/debian/control
+++ b/debian/control
@@ -149,6 +149,7 @@ Breaks:
  libgl1-nvidia-legacy-96xx-glx (<< 96.43.19-2),
  libgl1-nvidia-legacy-173xx-glx (<< 173.14.30-2),
  fglrx-glx (<< 1:11-6-~),
+ ia32-libs (<< 20120701) [i386],
 Replaces:
  nvidia-glx${nvidia:Legacy} (<< 195.36.31),
  libgl1-nvidia${nvidia:Legacy}-dev,
