make dkms package M-A foreign
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3283 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -221,7 +221,7 @@ Description: allows the selection of NVIDIA as GLX provider
 Package: nvidia-kernel-dkms
 Section: non-free/kernel
 Architecture: i386 amd64
-Multi-Arch: allowed
+Multi-Arch: foreign
 Pre-Depends:
  nvidia-installer-cleanup,
 Depends:
