--- a/debian/rules
+++ b/debian/rules
@@ -347,9 +347,10 @@ PASV	?= --pasv
 get-orig-source:
 	rm -rf get-orig-source || true
 	mkdir get-orig-source
+	ln -v ../.cache/*-$(version)-*.run get-orig-source/ || true
 	uscan --no-symlink --download-current-version $(PASV) \
 	    --watchfile debian/watch --destdir get-orig-source
-	test `ls get-orig-source/* | wc -l` = 2  # we need exactly 2 downloaded files
+	test $$(ls get-orig-source/* | wc -l) = 2  # we need exactly 2 downloaded files
 	@set -e -x ; \
 	    cd get-orig-source ; \
 	    newversion=$$(ls *-x86-*.run | sed -e 's/.*-\([0-9.]*\)\(-.*\)\?\.run/\1/') ; \
