new upstream long lived branch release 304.48 (2012-09-11)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3374 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -347,7 +347,7 @@ PASV	?= --pasv
 get-orig-source:
 	rm -rf get-orig-source || true
 	mkdir get-orig-source
-	ln -v ../.cache/*-$(version)-*.run get-orig-source/ || true
+	ln -v ../.cache/*-$(version).run get-orig-source/ || true
 	uscan --no-symlink --download-current-version $(PASV) \
 	    --watchfile debian/watch --destdir get-orig-source
 	test $$(ls get-orig-source/* | wc -l) = 2  # we need exactly 2 downloaded files
