break the ia32-libs in s-p-u
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3413 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -154,6 +154,7 @@ Breaks:
  libgl1-nvidia-legacy-173xx-glx (<< 173.14.30-2),
  fglrx-glx (<< 1:11-6-~),
  ia32-libs (<< 20120701) [i386],
+ ia32-libs (= 20120926) [i386],
  nvidia-settings (<< 304),
  nvidia-settings-legacy-173xx,
 Replaces:
