--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -22,3 +22,7 @@ package-name-doesnt-match-sonames
 # do so and forgets about it, leaving it unowned on the system.
 # Targets squeeze-backports and wheezy, can be removed after wheezy release.
 package-contains-empty-directory usr/lib/tls/
+
+# The legacy version is intended to be used with the legacy driver only.
+# Co-installability support is planned for jessie.
+breaks-without-version nvidia-settings-legacy-173xx
