split libxvmcnvidia1 from libgl1-nvidia-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3425 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -3,4 +3,4 @@ libnvidia-glcore.so.#VERSION#	#LIBDIR#/
 libnvidia-cfg.so.#VERSION#	#LIBDIR#/#PRIVATE#/
 libnvidia-tls.so.#VERSION#	#LIBDIR#/
 tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/tls/
-libXvMCNVIDIA.so.#VERSION#	#LIBDIR#/#PRIVATE#/
+#libXvMCNVIDIA.so.#VERSION#	#LIBDIR#/#PRIVATE#/
