--- a/debian/control
+++ b/debian/control
@@ -154,8 +154,7 @@ Breaks:
  libgl1-nvidia-legacy-96xx-glx (<< 96.43.19-2),
  libgl1-nvidia-legacy-173xx-glx (<< 173.14.30-2),
  fglrx-glx (<< 1:11-6-~),
- ia32-libs (<< 20120701) [i386],
- ia32-libs (= 20120926) [i386],
+ ia32-libs (<< 1:0) [i386],
  nvidia-settings (<< 304),
  nvidia-settings-legacy-173xx,
 Replaces:
