prefer nvidia-opencl-icd over opencl-icd
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/310@3570 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -612,7 +612,7 @@ Pre-Depends:
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
- opencl-icd | nvidia-opencl-icd,
+ nvidia-opencl-icd | opencl-icd,
 Provides:
  libopencl1,
  nvidia-libopencl1-i386 [i386],
